Fix aspect ratio on safari

--- a/static/css/home.less
+++ b/static/css/home.less
@@ -57,7 +57,7 @@
 
                     img {
                         width: 100%;
-                        height: 100%;
+                        height: auto;
                     }
                 } // .video-thumb
 
